Thu Apr 13 15:49:16 1995 Keith Vetter (keithv@fusion.com)

	* *.[ch]: removed unneeded INTERFACE from non-api functions.

Fri Mar 31 16:45:47 1995 Keith Vetter (keithv@fusion.com)

	* krb5_get_in_tkt: changed error return value for when clocks
           are out of skew to be KRB5_KDCREP_SKEW.

Fri Mar 31 00:44:26 1995  Theodore Y. Ts'o  (tytso@dcl)

	* rd_req.c (krb5_rd_req): Fix typo which caused new_keytab to not
		get freed, causing a memory leak.

Thu Mar 30 15:49:27 1995 Keith Vetter (keithv@fusion.com)

	* rd_req.c: removed unused local variable.

Tue Mar 28 18:34:20 1995  John Gilmore  (gnu at toad.com)

	* rd_req_sim.c:  Really remove the file.

Mon Mar 27 08:34:49 1995 Chris Provenzano (proven@mit.edu)

	* Makefile.in: Removed rd_req_sim.c

	* auth_con.c: Default cksumtype is now CKSUMTYPE_RSA_MD4_DES.

	* auth_con.c: Added krb5_auth_con_setuseruserkey(), 
		krb5_auth_con_getkey(), 
		krb5_auth_con_getremotesubkey(),
		krb5_auth_con_getauthenticator(), 
		krb5_auth_con_getremoteseqnumber(),
		krb5_auth_con_initivector().

	* auth_con.c: Fixed krb5_auth_con_getlocalsubkey() to check for
		a valid local_subkey before calling krb5_copy_keyblock().

	* auth_con.h: Fixed some comments.

	* mk_req_ext.c (krb5_mk_req_extended()): Always pass in a seed
		(the keyblock contents) to krb5_calculate_checksum()

	* rd_rep.c (krb5_rd_rep()): Use appropriate key to decode reply.

	* rd_safe.c (krb5_rd_safe()): Don't pass checksum to 
		krb5_rd_safe_basic(), it's unnecessary.

	* compat_recv.c (krb5_compat_recvauth()):
	* mk_rep.c (krb5_mk_rep()):
	* rd_req.c (krb5_rd_req()):
	* rd_req_dec.c (krb5_rd_req_decode()):
	* recvauth.c (krb5_recvauth()):
		Added a krb5_auth_context argument and eliminated many of 
		the other arguments because they are included in the
		krb5_auth_context structure.


Tue Mar 21 19:22:51 1995 Keith Vetter (keithv@fusion.com)

	* mk_safe.c: fixed signed/unsigned mismatch.
	* rd_safe.c: removed unused local variable currentime.